fix scrollbar

--- a/src/index.scss
+++ b/src/index.scss
@@ -49,3 +49,18 @@ body {
 img.minecraft {
     image-rendering: pixelated;
 }
+
+::-webkit-scrollbar {
+    width: 0.9rem;
+}
+
+::-webkit-scrollbar-track {
+    background-color: rgb(20, 20, 20);
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #d6dee1;
+    border-radius: 20px;
+    border: 0.3rem solid transparent;
+    background-clip: content-box;
+}
